Fixed horizontal alignment on events page

--- a/scss/_create-event.scss
+++ b/scss/_create-event.scss
@@ -21,14 +21,14 @@ div.time-picker ul li {
 
 .css-events-admin-login {
     padding: 48px 24px;
-    background: white;  
+    background: $color-white;  
     max-width: $container-max-width;
     margin: 0 auto;
 }
 
 .event-creator {
     padding: 48px 24px;
-    background: white;
+    background: $color-white;
     border-radius: 4px;
     box-shadow: 0px 4px 4px $color-gray-30;
 
@@ -112,7 +112,7 @@ div.time-picker ul li {
         font-size: 14px;
         transition: all 0.3s ease-in;
         &:nth-child(n + 2) {
-          margin: 8px 15px 8px 0;
+            margin: 8px 15px 8px 0;
         }
     }
 
@@ -154,6 +154,7 @@ div.time-picker ul li {
             background-repeat: no-repeat;
             background-size: contain;
             margin-bottom: 5px;
+            
             @include tablet-and-up {
                 min-height: 150px;
                 margin-bottom: 10px;
@@ -209,15 +210,15 @@ div.time-picker ul li {
     &__submit-btn {
         margin: 48px auto 0;
         &:hover {
-          cursor: pointer;
+            cursor: pointer;
         }
     }
 
     &__checkbox {
         display: none;
         & + .event-creator__tag {
-            background: #fff;
-            border: 1px solid #737373;
+            background: $color-white;
+            border: 1px solid $color-gray-secondary;
             border-radius: 25px;
             
             font-size: 0.875rem;
@@ -231,8 +232,8 @@ div.time-picker ul li {
             letter-spacing: 0.0025em;
 
             &:hover {
-                box-shadow: 0 0 0 4px #e0e0e0;
-                border: 1px solid #e0e0e0;
+                box-shadow: 0 0 0 4px $color-gray-secondary;
+                border: 1px solid $color-gray-secondary;
                 cursor: pointer;
             }
         }
@@ -371,9 +372,9 @@ div.time-picker ul li {
 
         .event-creator__error {
             @extend .error;
-            color: red;
+            color: $error;
             &-text {
-                color: red;
+                color: $error;
             }
         }
     }
@@ -392,7 +393,7 @@ div.time-picker ul li {
         &__label,
         &__label.event-creator__label {
             @extend .label;
-            color: red;
+            color: $error;
             font-size: remCalc(12);
             margin: 0;
             display: none;
@@ -401,7 +402,7 @@ div.time-picker ul li {
     }
 
     &__error-field {
-        color: red;
+        color: $error;
     }
 
     &__error-field {
@@ -488,7 +489,7 @@ div.time-picker ul li {
         text-decoration: none;
         margin-bottom: 32px;
         @include tablet-and-up {
-          margin: 0 32px 0 0 ;
+            margin: 0 32px 0 0 ;
         }
     }
 }
