--- a/scss/_event-single.scss
+++ b/scss/_event-single.scss
@@ -199,7 +199,7 @@
 
             a, 
             a:visited {
-                color: black;
+                color: $color-black;
             }
 
             a {
